# care-chords

./: .gitignore  Cargo.toml  README.md
assets/: carechords.service  sample.conf.toml
backend/: Cargo.toml  Dockerfile
backend/src/: app_settings.rs  http.rs  main.rs  pipeline.rs  server.rs  spot.rs  spotify.rs  spotify_client.rs  spotify_old.rs  spotify_player.rs  spotify_sink.rs  webserver.rs
backend/src/pipeline/: audio_bridge.rs  audio_pipeline.rs  livestream.rs  main.rs  mod.rs  monitor_source.rs  rtsp_server.rs  rtsp_source.rs  spotify.rs  spotify_source.rs
ios/SleepStream/Care Chords.xcodeproj/: project.pbxproj
ios/SleepStream/Care Chords.xcodeproj/project.xcworkspace/xcuserdata/wesley.xcuserdatad/: UserInterfaceState.xcuserstate
ios/SleepStream/Care Chords.xcodeproj/xcshareddata/xcschemes/: SleepStream.xcscheme
ios/SleepStream/Care Chords.xcodeproj/xcuserdata/wesley.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/SleepStream/Care Chords.xcodeproj/xcuserdata/wesley.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/SleepStream/SleepStream/: AudioController.swift  AudioManager.swift  AudioPlayerView.swift  AudioPlayerViewModel.swift  CameraController.swift  CameraView.swift  CameraViewController.swift  ContentView.swift  GStreamerAudioBackend.h  GStreamerAudioBackend.m  GStreamerBackend.h  GStreamerBackend.m  GStreamerBackendDelegate.swift  GStreamerBackendProtocol.swift  GStreamerVideoBackend.h  GStreamerVideoBackend.m  Info.plist  Models.swift  MusicController.swift  NetworkService.swift  SleepStream-Bridging-Header.h  SleepStreamApp.swift  Spotify.swift
ios/SleepStream/SleepStream.xcodeproj/: project.pbxproj
ios/SleepStream/SleepStream.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/SleepStream/SleepStream.xcodeproj/project.xcworkspace/xcuserdata/wesley.xcuserdatad/: UserInterfaceState.xcuserstate
ios/SleepStream/SleepStream.xcodeproj/xcuserdata/wesley.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/SleepStream/SleepStream/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/SleepStream/SleepStream/Assets.xcassets/Background.imageset/: Contents.json
ios/SleepStream/SleepStream/Controller/: GStreamerController.swift  MusicController.swift
ios/SleepStream/SleepStream/Controllers/: AudioOutputController.swift  GStreamerController.swift  LiveStreamController.swift  MusicController.swift  NetworkService.swift  NowPlayingMediator.swift  OsMediaPlayerController.swift  PlaylistController.swift  ServerConfig.swift  SpotifyController.swift
ios/SleepStream/SleepStream/GStreamer/: AudioState.swift  GStreamerAudioBackend.h  GStreamerAudioBackend.m  GStreamerBackend.h  GStreamerBackend.m  GStreamerBackendDelegate.swift  GStreamerVideoBackend.h  GStreamerVideoBackend.m  SleepStream-Bridging-Header.h
ios/SleepStream/SleepStream/UI/Common/: ClearBackground.swift  Color.swift  Path.swift  RemoteImage.swift  RoundedCornerRectangle.swift  TabPanel.swift  UIViewWrapper.swift
ios/SleepStream/SleepStream/UI/Components/: VideoDisplayView.swift
ios/SleepStream/SleepStream/UI/Main/: MainView.swift  ViewModel.swift
ios/SleepStream/SleepStream/UI/Main/Components/: AudioOutputIcon.swift  MuteButton.swift  SettingsButton.swift  SettingsView.swift  ShuffleButton.swift  SleepTimerButton.swift
ios/SleepStream/SleepStream/UI/Main/Features/: LiveStreamView.swift  MusicControlsView.swift  NowPlayingView.swift  PlaylistView.swift  VideoFeedView.swift
ios/gstreamer-test/gstreamer-test/: ContentView.swift  GStreamerController.swift  GStreamerView.swift  VideoView.swift  bridging-header.h  gstreamer_testApp.swift
ios/gstreamer-test/gstreamer-test.xcodeproj/: project.pbxproj
ios/gstreamer-test/gstreamer-test.xcodeproj/project.xcworkspace/xcuserdata/wesley.xcuserdatad/: UserInterfaceState.xcuserstate
ios/gstreamer-test/gstreamer-test.xcodeproj/xcuserdata/wesley.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: main.rs  pipeline.rs  spotify.rs  webserver.rs
