[package]
name = "sleepstream"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.23.3"
gstreamer-rtsp = "0.23.2"
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["full"] }
serde_json = "1.0.133"
warp = "0.3.7"
dbus = { version = "0.9.7", features = ["futures"] }
serde = { version = "1.0.215", features = ["derive"] }
dbus-tokio = "0.7.6"
log = "0.4.22"
simple_logger = "5.0.0"

# Configuratation for Cross (https://github.com/cross-rs/cross) to compile to aarch64
# Installs gstreamer & dbus dependency dev packages
[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update",
    "apt-get --assume-yes install libgstreamer1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer-plugins-base1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer-plugins-base1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libdbus-1-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstrtspserver-1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstrtspserver-1.0:$CROSS_DEB_ARCH"
]
