[package]
name = "carechords"
version = "1.1.0"
edition = "2024"

[dependencies]
gstreamer = "0.23.5"
gstreamer-rtsp = "0.23.5"
gstreamer-app = "0.23.5"

log = "0.4"
simple_logger = "5.0"
anyhow = "1.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
warp = "0.3.7"

librespot = "0.6"
librespot-playback = { version = "0.6", default-features = false, features = [] }
librespot-core = "0.6"
librespot-discovery = "0.6"
librespot-metadata = "0.6"
hex = "0.4"
sha1 = "0.10"
futures = "0.3"

# Configuratation for Cross (https://github.com/cross-rs/cross) to compile to aarch64
# Installs gstreamer & audio dev packages needed to build Care Chords
[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update",
    "apt-get --assume-yes install libasound2-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install alsa-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install alsa-devel:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install alsa:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer-plugins-base1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer-plugins-base1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libdbus-1-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstrtspserver-1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstrtspserver-1.0:$CROSS_DEB_ARCH"
]
