[package]
name = "carechords"
version = "1.2.0"
edition = "2024"

[dependencies]
gstreamer = "0.23.5"
gstreamer-rtsp = "0.23.5"
gstreamer-rtsp-server = "0.23.5"
gstreamer-app = "0.23.5"

log = "0.4"
simple_logger = "5.0"
anyhow = "1.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
warp = "0.3.7"

librespot = "0.8"
librespot-playback = { version = "0.8", default-features = false, features = [] }
librespot-core = "0.8"
librespot-discovery = "0.8"
librespot-metadata = "0.8"
hex = "0.4"
sha1 = "0.10"
futures = "0.3"
toml = "0.8.20"
futures-util = "0.3.31"
async-stream = "0.3.6"
rand = "0.8"

# Configuratation for Cross (https://github.com/cross-rs/cross) to compile to Linux aarch64
# Installs gstreamer & audio dev packages needed to build Care Chords
[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update",
    "apt-get --assume-yes install libasound2-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install alsa:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer-plugins-base1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer-plugins-base1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libdbus-1-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstrtspserver-1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstrtspserver-1.0:$CROSS_DEB_ARCH"
]

# Configuratation for Cross (https://github.com/cross-rs/cross) to compile to Linux x86_64
# Installs gstreamer & audio dev packages needed to build Care Chords
# aws-lc-sys requires gcc10 or clang
[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update",
    "apt-get --assume-yes install libasound2-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install alsa:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer-plugins-base1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer-plugins-base1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstreamer1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstrtspserver-1.0-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libgstrtspserver-1.0:$CROSS_DEB_ARCH",
    "apt-get --assume-yes remove gcc-9",
    "apt-get --assume-yes install gcc-10:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install clang:$CROSS_DEB_ARCH",
    "apt-get --assume-yes remove gcc-9"
]
